--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
     <p>
         Here are some of my projects, none of them are particularly prod-ready, just things that have scratched various itches over the years.
         <ul>
+            <li><a href="https://github.com/leontrolski/dnjs">dnjs</a> - a Python interpreter for a useful subset of JS</li>
             <li><a href="https://github.com/leontrolski/immerframe">immerframe</a> - a neat way to make deep immutable changes in Python with structural sharing</li>
             <li><a href="https://github.com/leontrolski/towpath">towpath</a> - a js library using proxies to attach paths to values in a nested structure</li>
             <li><a href="https://github.com/leontrolski/dawdle">dawdle</a> - a very half-baked DSL showing how a neat relational language <em>could</em> look like</li>
-            <li><a href="https://github.com/leontrolski/brotz">brotz</a> - a respite from Jinja templating inspired by mithril/React</li>
             <li><a href="https://github.com/leontrolski/fussball">fussball</a> - a Bayesian-ly founded table-football scoreboard (would work for ping-pong too)</li>
         </ul>
     </p>
