--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <li><a href="contrair-articles.html">Contrair articles</a> countering certain premises</li>
             <li>What if we'd had <a href="dom-syntax.html">nice html-in-js syntax</a> from the beginning?</li>
             <li>A <a href="consciousness.html">summary</a> of the book "Consciousness and the Social Brain"</li>
+            <li>A <a href="recursing-with-yield.html">tiny</a> bit about recursing with the yield statement</li>
         </ul>
     </p>
     <p>
