add-advisory-locks

--- a/index.html
+++ b/index.html
@@ -24,13 +24,19 @@
         </ul>
     </p>
     <p>
+        Some python/js bits and bobs.
+        <ul>
+            <li>A <a href="recursing-with-yield.html">tiny</a> bit about recursing with the yield statement</li>
+            <li>Everyone should use <a href="postgres-advisory-locks.html">postgres advisory locks</a>!</li>
+        </ul>
+    </p>
+    <p>
         Here are some other thoughts.
         <ul>
             <li>A piece about potential <a href="nested-sql.html">nested SQL queries</a></li>
             <li><a href="contrair-articles.html">Contrair articles</a> countering certain premises</li>
             <li>What if we'd had <a href="dom-syntax.html">nice html-in-js syntax</a> from the beginning?</li>
             <li>A <a href="consciousness.html">summary</a> of the book "Consciousness and the Social Brain"</li>
-            <li>A <a href="recursing-with-yield.html">tiny</a> bit about recursing with the yield statement</li>
         </ul>
     </p>
     <p>
