add link from index

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <p>
         Some python/js bits and bobs.
         <ul>
+            <li><b><a href="semi-isomorphic.html">Evolving backend → frontend rendered Python/JS apps with dnjs</a></b></li>
             <li>A <a href="recursing-with-yield.html">tiny</a> bit about recursing with the yield statement</li>
             <li>Everyone should use <a href="postgres-advisory-locks.html">postgres advisory locks</a>!</li>
         </ul>
