add virtualenvs for node devs

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <ul>
             <li><b><a href="semi-isomorphic.html">Evolving backend → frontend rendered Python/JS apps with dnjs</a></b></li>
             <li>Everyone should use <a href="postgres-advisory-locks.html">postgres advisory locks</a>!</li>
+            <li>Python <a href="virtualenvs-for-node-devs.html">virtualenvs</a> for Node devs</li>
             <li>Stop doing <a href="sane-config.html">mad config</a></li>
             <li>A <a href="recursing-with-yield.html">tiny</a> bit about recursing with the yield statement</li>
         </ul>
