--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     <p>
         Here are some of my projects, none of them are particularly prod-ready, just things that have scratched various itches over the years.
         <ul>
+            <li><a href="https://github.com/leontrolski/sqlski">sqlski</a> - postgres-side nesting of data for Python</li>
             <li><a href="https://github.com/leontrolski/dnjs">dnjs</a> - a Python interpreter for a useful subset of JS</li>
             <li><a href="https://github.com/leontrolski/immerframe">immerframe</a> - a neat way to make deep immutable changes in Python with structural sharing</li>
             <li><a href="https://github.com/leontrolski/towpath">towpath</a> - a js library using proxies to attach paths to values in a nested structure</li>
