update rss and index

--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
     <p>
         Some python/js bits and bobs.
         <ul>
-            <li><b><a href="semi-isomorphic.html">Evolving backend → frontend rendered Python/JS apps with dnjs</a></b></li>
+            <li><a href="semi-isomorphic.html">Evolving backend → frontend rendered Python/JS apps with dnjs</a></li>
             <li>Everyone should use <a href="postgres-advisory-locks.html">postgres advisory locks</a>!</li>
             <li>Python <a href="virtualenvs-for-node-devs.html">virtualenvs</a> for Node devs</li>
             <li>Stop doing <a href="sane-config.html">mad config</a></li>
+            <li>While you're there, just <a href="mostly-pointless.html">stop doing OO so much</a></li>
             <li>A <a href="recursing-with-yield.html">tiny</a> bit about recursing with the yield statement</li>
         </ul>
     </p>
