--wip-- [skip ci]

--- a/poor-mans-object.html
+++ b/poor-mans-object.html
@@ -25,9 +25,9 @@
             <li>In a bonus section, implement inheritance.</li>
         </ul>
     </p>
-    <em>
+    <b>
         You'll have the best time with this post if you play around with the more complicated code snippets in the <a href="https://javascript.info/devtools">developer tools console <code>Cmd + Opt + J or F12</code></a>.
-    </em>
+    </b>
 
     <h2>Our aim</h2>
     <p>
@@ -53,15 +53,17 @@
     <p>
         We're going to pick a small bit of javascript to use, this bit may seem obvious, but we're just demonstrating how little stuff we need to get to OO. Feel free to go quickly through this bit.
     </p>
-    <p>Values are strings or arrays of values:</p>
-    <pre><code>"string", [value]</pre></code>
+    <p>Values are numbers, strings or arrays of values:</p>
+    <pre><code>3.14 "string" [value]</pre></code>
     <p>We can assign values to names:</p>
         <pre><code>const a = "foo"</pre></code>
     <p>We can get the nth element of an array with:</p>
     <pre><code>array[n]</pre></code>
-    <p>We can concatenate strings:</p>
+    <p>We can concatenate strings/add numbers:</p>
     <pre><code>>>> "hello " + "oli"
-"hello oli"</pre></code>
+"hello oli"
+>>> 2 + 3
+5</pre></code>
     <p>We can loop over arrays:</p>
     <pre><code>for (const n of l){do something}</pre></code>
     <p>If two strings are equal, we can do something:</p>
