--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <p>
         Here are some other thoughts.
         <ul>
+            <li>Can we <a href="alter.html">contain mutations</a></li>
             <li>A piece about potential <a href="nested-sql.html">nested SQL queries</a></li>
             <li><a href="contrair-articles.html">Contrair articles</a> countering certain premises</li>
             <li>What if we'd had <a href="dom-syntax.html">nice html-in-js syntax</a> from the beginning?</li>
