add foreign key page

--- a/nested-sql.html
+++ b/nested-sql.html
@@ -14,6 +14,13 @@
 </head>
 <body class="language-sql">
     <a href="index.html"><img style="height:2em" src="pic.png"/>⇦</a>
+    <br>
+    <br>
+    <br>
+    <p>
+        <b>I've since addressed a lot of these points in an <a href="https://github.com/leontrolski/sqlski">experimental Python library</a>.</b>
+    </p>
+    <br>
     <h1>What nested SQL queries might look like</h1>
     <p>
         A <a href="http://calpaterson.com/">friend</a> was talking to me about ORM design recently. I'm a heavy <a href="https://www.sqlalchemy.org/">SQLAlchemy</a> user, but see all the reasons people dislike ORMs, so on a recent project I had a go at dipping back down to raw SQL land to see how I'd cope.
