--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
         Some python/js bits and bobs.
         <ul>
             <li><a href="semi-isomorphic.html">Evolving backend → frontend rendered Python/JS apps with dnjs</a></li>
-            <li>Everyone should use <a href="postgres-advisory-locks.html">postgres advisory locks</a>!</li>
             <li>Python <a href="virtualenvs-for-node-devs.html">virtualenvs</a> for Node devs</li>
             <li>Stop doing <a href="sane-config.html">mad config</a></li>
             <li>While you're there, just <a href="mostly-pointless.html">stop doing OO so much</a></li>
@@ -36,12 +35,19 @@
         </ul>
     </p>
     <p>
+        Postgres things.
+        <ul>
+            <li>Everyone should use <a href="postgres-advisory-locks.html">postgres advisory locks</a>!</li>
+            <li>Don't get bitten by missing <a href="foreign-key-indexes.html">foreign key indexes</a></li>
+            <li>A piece about potential <a href="nested-sql.html">nested SQL queries</a></li>
+        </ul>
+    </p>
+    <p>
         Here are some other thoughts.
         <ul>
-            <li>Can we <a href="alter.html">contain mutations</a></li>
-            <li>A piece about potential <a href="nested-sql.html">nested SQL queries</a></li>
-            <li><a href="contrair-articles.html">Contrair articles</a> countering certain premises</li>
             <li>What if we'd had <a href="dom-syntax.html">nice html-in-js syntax</a> from the beginning?</li>
+            <li>Can we <a href="alter.html">contain mutations</a></li>
+            <li><a href="contrair-articles.html">Contrair articles</a> countering certain premises</li>
             <li>A <a href="consciousness.html">summary</a> of the book "Consciousness and the Social Brain"</li>
         </ul>
     </p>
