add 6 line React

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <p>
         Here are a series of posts where I reimplement a minimal version of something to demonstrate how it works.
         <ul>
-            <li>33 line <a href="33-line-react.html">React</a>-like library, and <a href="33-line-react-thoughts.html">followup</a></li>
+            <li><a href="33-line-react.html">33 line React</a>-like library, and <a href="33-line-react-thoughts.html">followup</a>, also a <a href="96-line-react-jsx.html">96 line React with JSX</a></li>
             <li>Ever wondered what the hell is going on with your <code>pandas.DataFrame</code>, check <a href="fake-data-frame.html">this</a> out</li>
             <li>Reach OO/closure <a href="poor-mans-object.html">nirvana</a></li>
         </ul>
