add SQLAlchemy relationships

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <li>While you're there, just <a href="mostly-pointless.html">stop doing OO so much</a></li>
             <li>A <a href="recursing-with-yield.html">tiny</a> bit about recursing with the yield statement</li>
             <li>I can never remember how to <a href="git-bisect.html">git bisect</a></li>
+            <li>SQLAlchemy <a href="sqlalchemy-relationships.html">relationship loading</a> techniques with examples</li>
         </ul>
     </p>
     <p>
