--- a/index.html
+++ b/index.html
@@ -26,13 +26,14 @@
     <p>
         Some python/js bits and bobs.
         <ul>
-            <li><a href="semi-isomorphic.html">Evolving backend → frontend rendered Python/JS apps with dnjs</a></li>
+            <li><a href="strongly-typed-http.html">Strongly type</a> your Web 1.0 interfaces</li>
             <li>Python <a href="virtualenvs-for-node-devs.html">virtualenvs</a> for Node devs</li>
             <li>Stop doing <a href="sane-config.html">mad config</a></li>
             <li>While you're there, just <a href="mostly-pointless.html">stop doing OO so much</a></li>
             <li>A <a href="recursing-with-yield.html">tiny</a> bit about recursing with the yield statement</li>
             <li>I can never remember how to <a href="git-bisect.html">git bisect</a></li>
             <li>SQLAlchemy <a href="sqlalchemy-relationships.html">relationship loading</a> techniques with examples</li>
+            <li><a href="semi-isomorphic.html">Evolving</a> backend → frontend rendered Python/JS apps with dnjs</li>
         </ul>
     </p>
     <p>
