add link to pratt

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <li><a href="33-line-react.html">33 line React</a>-like library, and <a href="33-line-react-thoughts.html">followup</a>, also a <a href="96-line-react-jsx.html">96 line React with JSX</a></li>
             <li>Ever wondered what the hell is going on with your <code>pandas.DataFrame</code>, check <a href="fake-data-frame.html">this</a> out</li>
             <li>Reach OO/closure <a href="poor-mans-object.html">nirvana</a></li>
+            <li>A half-baked post demonstrating a simple <a href="pratt-example.html">Pratt parser</a></li>
         </ul>
     </p>
     <p>
