--- a/33-line-react.html
+++ b/33-line-react.html
@@ -19,8 +19,9 @@
     <a href="index.html"><img style="height:2em" src="pic.png"/>⇦</a>
     <h1>33 line React</h1>
     <p>
-        <em><a href="33-line-react-thoughts.html">Thoughts</a> on reading through the hacker news <a href="https://news.ycombinator.com/item?id=22776753">response</a>.</em>
+        <em><a href="33-line-react-thoughts.html">Thoughts</a> on reading through the hacker news <a href="https://news.ycombinator.com/item?id=22776753">response</a>. <a href="96-line-react-jsx.html">96 line</a> version with JSX compiler.</em>
     </p>
+    <br>
     <p>
         <a href="https://reactjs.org/">React</a>
         <ul>
