--- a/constraint-sudoku.html
+++ b/constraint-sudoku.html
@@ -137,6 +137,7 @@ def solutions(game: Game) -&gt; Iterator[Game]:
             ? Turns out a generic backtracking solver is not crazy crazy complicated:
         </p>
         <pre class="language-python"><code>from dataclasses import dataclass, field
+from json import loads
 from typing import Any, Callable, Generic, Hashable, Iterator, TypeVar
 
 K = TypeVar(&#39;K&#39;, bound=Hashable)  # these are &#34;variables&#34;
@@ -166,16 +167,13 @@ def yield_solutions(problem: Problem[K, V]) -&gt; Iterator[Assignments[K, V]]:
     while q:
         assignments = q.pop()
         for local in _possible(problem, assignments):
-            if ([k for k in problem.map if k not in local]):
+            if set(problem.map) - set(local):  # if any unassigned
                 q.append(local)
             else:
                 yield local
 
 
-def _possible(
-    problem: Problem[K, V],
-    assignments: Assignments[K, V]
-) -&gt; list[Assignments[K, V]]:
+def _possible(problem: Problem[K, V], assignments: Assignments[K, V]) -&gt; Iterator[Assignments[K, V]]:
     def key(v: K) -&gt; tuple[int, int]:
         return -len(problem.map[v].constraints), len(problem.map[v].domain)
 
@@ -184,11 +182,10 @@ def _possible(
         return []
     # pick k with the (highest number of constraints, smallest domain)
     k = sorted(unassigned, key=key)[0]
-    return [
-        local
-        for local in ({**assignments, k: v} for v in problem.map[k].domain)
-        if all(constraint(local) for constraint in problem.map[k].constraints)
-    ]</code>
+    for v in problem.map[k].domain:
+        local = {**assignments, k: v}
+        if all(constraint(local) for constraint in problem.map[k].constraints):
+            yield local</code>
 </pre>
         <p>
 
