--- a/index.html
+++ b/index.html
@@ -19,8 +19,14 @@
         Here are a series of posts where I reimplement a minimal version of something to demonstrate how it works.
         <ul>
             <li><a href="33-line-react.html">33 line React</a>-like library, and <a href="33-line-react-thoughts.html">followup</a>, also a <a href="96-line-react-jsx.html">96 line React with JSX</a></li>
-            <li>Sudoku <a href="constraint-sudoku.html">solving</a> using a custom backtracking constraint solver</li>
             <li>Ever wondered what the hell is going on with your <code>pandas.DataFrame</code>, check <a href="fake-data-frame.html">this</a> out</li>
+        </ul>
+    </p>
+    <p>
+        Weenie posts reducing some CS concept down to its essentials. <em>There are many different takes on these topics scattered across the internet.</em>
+        <ul>
+            <li>Sudoku <a href="constraint-sudoku.html">solving</a> using a custom backtracking constraint solver</li>
+            <li><a href="lambda-calculus.html">Lambda calculus</a> in modern JavaScript</li>
             <li>Reach OO/closure <a href="poor-mans-object.html">nirvana</a></li>
             <li>A half-baked post demonstrating a simple <a href="pratt-example.html">Pratt parser</a></li>
         </ul>
