--- a/lambda-calculus.html
+++ b/lambda-calculus.html
@@ -96,14 +96,28 @@ const sum3 = Z(g => n => isZero(n)
 
         </script>
         <p>
-            You can Google &#39;Lambda calculus&#39; for a deeper description, but in a nutshell it&#39;s a very small, Turing-complete, formal system for expressing computation as symbol manipulation.
+            The aim of this blog post is to give a flavour of how one might build a useful programming language  (or for that matter mathematical system) from a really really small foundation. In our JavaScript notation, the building blocks are just:
+        </p>
+        <pre class="language-javascript"><code>f = x =&gt; M  // function definition
+f(y)        // function application</code>
+</pre>
+        <p>
+            That&#39;s it - no numbers, no lists, no loops, no boolean switches, no strings, no objects.
         </p>
         <p>
-            This post rewrites some of the fundamental ideas in familiar JavaScript notation which allows us to easily evaluate them. You can try this out in your browser&#39;s console - all the assignments below are in global scope.
+            Instead, we&#39;ll give a flavour of how you might conjure up these things seemingly out of the ether.
         </p>
         <br>
+        <hr>
+        <br>
+        <h2>
+            Doing Lambda calculus with JavaScript notation
+        </h2>
         <p>
-            In Lambda calculus notation, you might write something like:
+            You can Google &#39;Lambda calculus&#39; for a deeper description, but in a nutshell it&#39;s a very small, Turing-complete, formal system for expressing computation as symbol manipulation. We&#39;re going to rewrite some of the fundamental ideas in familiar JavaScript notation which allows us to easily evaluate them. You can try this out in your browser&#39;s console - all the assignments below are in global scope.
+        </p>
+        <p>
+            In Lambda calculus notation, you might write something kinda like:
         </p>
         <pre class="language-javascript"><code>(λf.f 4) (λx.x²)</code>
 </pre>
@@ -116,10 +130,10 @@ const sum3 = Z(g => n => isZero(n)
             Each anonymous function λ takes one argument. When you call a function, you simply replace the argument each time it occurs in the function&#39;s body with the value the function was called with.
         </p>
         <p>
-            It&#39;s worth noting that this process (known as β-reduction) is just a dumb mechanical one of symbol replacement - nothing else weird is happening. This is important, the programs are theorems, and by repeatedly applying β-reduction, we             <a href="https://en.wikipedia.org/wiki/Curry%E2%80%93Howard_correspondence#Natural_deduction_and_lambda_calculus">
-                prove
+            It&#39;s worth noting that this process (known as β-reduction) is just a dumb mechanical one of symbol replacement - nothing else weird is happening. This is important -             <a href="https://en.wikipedia.org/wiki/Curry%E2%80%93Howard_correspondence#Natural_deduction_and_lambda_calculus">
+                programs are proofs
             </a>
-             (or disprove) them within the system.
+             and by repeatedly applying β-reduction, we can verify them.
         </p>
         <p>
             In the case of the example above:
@@ -214,10 +228,7 @@ f =&gt; a =&gt; f(f(f(a)))</code>
 </pre>
         <p>
             Phewph, that was long, but we did end up with             <code class="inline">f =&gt; a =&gt; f(f(f(a)))</code>
-            , which is the Church numeral for &#39;3&#39;, so we&#39;ve             <b>
-                proven
-            </b>
-             1 + 2 = 3, yay!
+            , which is the Church numeral for &#39;3&#39;, so we&#39;ve shown definitively 1 + 2 = 3, yay!
         </p>
         <p>
             We can see intuitively how we came up with some of the definitions. Remember earlier, we said the Church numeral 2 is the adverb &#39;call             <code class="inline">f</code>
