--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!--
 TODO
+- microservice middleground
+- popper and agile DOI:10.1007/11787181_26
+- political theories and team styles - strong man theory
 - typed lambda calculus
-- ask someone about where 1 + 1 = 2 is a proof
+- ask someone about where 1 + 1 = 2 is a proof - https://math.stackexchange.com/questions/4410936/does-a-particular-statement-in-lambda-calculus-count-as-a-proof
 - the energy industry and paying for stuff
 - incidental complexity and caching
 - cyling in the south east
