--- a/leet.html
+++ b/leet.html
@@ -34,7 +34,7 @@
             Interview patterns in Python
         </h1>
         <p>
-            Not necessarily fastest, but hopefully neatest. Recursive problems can be converted to while loops.
+            Not necessarily fastest, but hopefully neatest. Recursive problems can be generically converted to while loops to circumvent recursion limit.
         </p>
         <details id="top">
             <summary>
@@ -82,7 +82,8 @@ from types import SimpleNamespace</code>
 .tag-selected{font-weight:bold;}
 .problem{margin-top:4rem;}
 .no-border{border:none;}
-.description{padding:1rem;}
+.description{padding-left:1rem;}
+.question{padding-bottom:0.5rem;}
 
         </style>
         <script src="33-line-react.js">
