--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@ TODO
     <p>
         Weenie posts reducing some <b>computer science</b> concept down to its essentials. <em>There are many different takes on these topics scattered across the internet.</em>
         <ul>
+            <li>Tips for tricky <a href="leet.html">leet code</a> style questions in interviews</li>
             <li>Sudoku <a href="constraint-sudoku.html">solving</a> using a custom backtracking constraint solver</li>
             <li><a href="lambda-calculus.html">Lambda calculus</a> in modern JavaScript</li>
             <li>Reach OO/closure <a href="poor-mans-object.html">nirvana</a></li>
