--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@ TODO
     <p>
         <b>Non-programming</b>.
         <ul>
+            <li><a href="cycling.html">Cycling</a> day-trips from Central London</li>
             <li>A <a href="consciousness.html">summary</a> of the book "Consciousness and the Social Brain"</li>
             <li>Check out my weird <a href="https://soundcloud.com/leontrolski">music</a>.</li>
         </ul>
